# cfan

./: CMakeLists.txt  Control.cpp  Control.h  CoolingDevice.cpp  CoolingDevice.h  README.md  cfan.service  enable-service.sh  example-config-win.yml  example-config.yml  install-debian.sh  install-yamlcpp.sh  linux-finish-install.sh  main.cpp  system-utils.cpp  system-utils.h  utils.cpp  utils.h
cooling/: CoolingDevice.cpp  CoolingDevice.h
detection/: Detector.cpp  Detector.h
libs/winfan/: CMakeLists.txt  Chips.h  FanDude.cpp  OlsDll.cpp  OlsDll.h  Service.cpp  Service.h  main.cpp  pch.h  winfan.cpp
libs/winfan/devices/: Device.cpp  Device.h  Devices.cpp  Devices.h  MainBoard.cpp  MainBoard.h  SmBios.cpp  SmBios.h
libs/winfan/devices/cpu/: AMD19CPU.cpp  AMD19CPU.h  CPU.cpp  CPU.h
libs/winfan/devices/mainboard/: MainBoard.cpp  MainBoard.h
libs/winfan/devices/mainboard/superIo/: NCT6775.cpp  NCT6775.h  SuperIo.cpp  SuperIo.h
libs/winfan/include/winfan/: winfan.h
libs/winfan/libs/ols-api/: CMakeLists.txt  Driver.cpp  OlsApi.cpp  OlsApi.def  OlsDef.h  OlsDll.cpp  OlsIoctl.h
libs/winfan/libs/ols-api/include/ols-api/: OlsApi.h  OlsApiInit.h
libs/winfan/lpcIo/: LpcIo.cpp  LpcIo.h  LpcIoPort.cpp  LpcIoPort.h
libs/winfan/superIo/: NCT6775.cpp  NCT6775.h  SmBios.h  SuperIo.cpp  SuperIo.h
src/: Control.cpp  Control.h  Table.cpp  Table.h  main.cpp  system-utils.cpp  system-utils.h  utils.cpp  utils.h
src/cooling/: CoolingDevice.cpp  CoolingDevice.h
src/detection/: Detector.cpp
src/linux/: linux-utils.cpp  linux-utils.h
src/thermal/: ThermalCpu.cpp  ThermalCpu.h  ThermalGpu.cpp  ThermalGpu.h  ThermalNvidiaGpu.cpp  ThermalNvidiaGpu.h  ThermalProbe.cpp  ThermalProbe.h  ThermalZone.cpp  ThermalZone.h
thermal/: ThermalCpu.cpp  ThermalCpu.h  ThermalNvidiaGpu.cpp  ThermalNvidiaGpu.h  ThermalZone.cpp  ThermalZone.h
